...
    setAndNavigate(accepted);
  };

  return (
    <SafeAreaView
      style={styles.notificationsContainer}
      testID="set-notifications-view">
      <ScrollView
        contentContainerStyle={{
          alignItems: 'center',
        }}
        scrollEnabled={isNarrowHeight}>
        <ImageContainer justifyContent={'flex-end'}>
...
              onPress={() => onSetNotificationsPress(true)}>
              {t('Allow')}
            </Button>
          </ActionContainer>
          <ActionContainer>
            <Button
              testID="deny-button"
              accessibilityLabel={t('Deny notifications')}
              buttonStyle={'secondary'}
              onPress={() => onSetNotificationsPress(false)}>
              {t('Deny')}
            </Button>
          </ActionContainer>
...
