...
  const onCloseLockWarningModal = () => {
    shouldEnableBiometricRef.current = false;
    hideLockWarningModal();
  };

  return (
    <SafeAreaView style={styles.pinContainer} testID="security-view">
      <ScrollView
        contentContainerStyle={{
          alignItems: 'center',
        }}>
        <ImageContainer>{PinImage[themeType]}</ImageContainer>
        <TitleContainer>
...
              buttonStyle={'secondary'}>
              {t('Biometric')}
            </Button>
          </ActionContainer>
          <ActionContainer>
            <Button
              testID="skip-security-button"
              accessibilityLabel={t('Skip security setup')}
              onPress={onSkipPressRef.current}
              buttonStyle={'cancel'}>
              {t('Maybe Later')}
            </Button>
          </ActionContainer>
...
