...
  const bodyColor = theme.dark ? Slate30 : SlateDark;
  const secondaryTextColor = theme.dark ? theme.colors.text : Action;

  return (
    <SafeAreaView
      style={styles.createKeyContainer}
      testID="create-key-view"
      onLayout={onPerformanceLayout}>
      <ScrollView
        contentContainerStyle={{
          alignItems: 'center',
        }}>
        <View style={styles.imageContainer}>{KeyImage[themeType]}</View>
...
              style={styles.primaryButton}>
              <Text style={styles.primaryButtonText}>{t('Create a Key')}</Text>
            </TouchableOpacity>
          </View>
          <View style={styles.actionContainer}>
            <TouchableOpacity
              testID="i-already-have-a-key-button"
              accessibilityLabel={t('I already have a Key')}
              onPress={() => {
                dispatch(
                  Analytics.track('Clicked Import Key', {
                    context: 'onboarding',
                  }),
...
